implementando la seccion del datos para entrega del producto

--- a/src/app/components/catalogue/product/product.component.scss
+++ b/src/app/components/catalogue/product/product.component.scss
@@ -1,23 +1,34 @@
-.title{
-    display: -webkit-box;
-      display: -moz-box;
-      display: box;
-      -webkit-box-orient: vertical;
-      -moz-box-orient: vertical;
-      box-orient: vertical;
-      -webkit-line-clamp: 1;
-      line-clamp: 11;
-      overflow: hidden;
-  }
-  .example-card {
-      max-width: 400px;
-    }
-    
-  .example-header-image {
-      background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-      background-size: cover;
-  }
-  .flex__action{
-    display: flex;
-    justify-content: space-between;
-  }
+.title {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  box-orient: vertical;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+  overflow: hidden;
+}
+.example-card {
+  max-width: 300px;
+}
+
+.example-header-image {
+  background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
+  background-size: cover;
+}
+.flex__action {
+  display: flex;
+  justify-content: space-between;
+}
+.description {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  box-orient: vertical;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
+  overflow: hidden;
+}
