--- a/src/app/components/catalogue/catalogue.component.scss
+++ b/src/app/components/catalogue/catalogue.component.scss
@@ -1,6 +1,6 @@
 .content__card{
   display: flex;
   flex-wrap: wrap;
-  gap: 0.5rem;
-  justify-content: center;
+  gap: 1rem 0;
+  justify-content: space-around;
 }
