--- a/src/app/components/catalogue/product/product.component.html
+++ b/src/app/components/catalogue/product/product.component.html
@@ -12,7 +12,7 @@
     alt="Photo of a Shiba Inu"
   />
   <mat-card-content>
-    <p>
+    <p class="description">
       {{ product.description }}
     </p>
   </mat-card-content>
