--- a/src/app/components/checkcart/checkcart.component.scss
+++ b/src/app/components/checkcart/checkcart.component.scss
@@ -7,6 +7,7 @@ div.container {
   .example-form {
     min-width: 150px;
     max-width: 500px;
+    max-height: 400px;
     width: 100%;
     box-shadow: 1px 2px 7px grey;
     padding: 0.5rem;
