--- a/src/app/components/checkcart/details-products-cart/details-products-cart.component.html
+++ b/src/app/components/checkcart/details-products-cart/details-products-cart.component.html
@@ -1,21 +1,50 @@
-<div class="example-container mat-elevation-z8">
-    <table mat-table [dataSource]="transactions">
-      <!-- Item Column -->
-      <ng-container matColumnDef="item">
-        <th mat-header-cell *matHeaderCellDef> Item </th>
-        <td mat-cell *matCellDef="let transaction"> {{transaction.item}} </td>
-        <td mat-footer-cell *matFooterCellDef> Total </td>
+<div class="container__detail__cart__generla">
+  <div class="example-container mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource">
+      <!-- Position Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>No.</th>
+        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
       </ng-container>
-  
-      <!-- Cost Column -->
-      <ng-container matColumnDef="cost">
-        <th mat-header-cell *matHeaderCellDef> Cost </th>
-        <td mat-cell *matCellDef="let transaction"> {{transaction.cost | currency}} </td>
-        <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>producto</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
       </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
+
+      <!-- quantity Column -->
+      <ng-container matColumnDef="quantity">
+        <th mat-header-cell *matHeaderCellDef>cantidad</th>
+        <td mat-cell *matCellDef="let element">X {{ element.quantity }}</td>
+      </ng-container>
+
+      <!-- price Column -->
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef>precio</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.price | currency }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
   </div>
+  <table class="value__cart">
+    <div>
+      <tr>
+        <th>SubTotal :</th>
+        <td>{{ subTotal$ | async | currency }}</td>
+      </tr>
+      <tr>
+        <th>Iva 12% :</th>
+        <td>{{ iva$ | async | currency }}</td>
+      </tr>
+      <tr>
+        <th>Total :</th>
+        <td>{{ Total$ | async | currency }}</td>
+      </tr>
+    </div>
+  </table>
+</div>
