--- a/src/app/components/checkcart/checkcart.component.scss
+++ b/src/app/components/checkcart/checkcart.component.scss
@@ -1,28 +1,48 @@
 div.container {
-  display: grid;
-  grid-template-columns:  repeat(auto-fit, minmax(540px, 1fr));
+  display: flex;
+  flex-wrap: wrap;
+  gap:  1.5rem;
   justify-content: center;
-  grid-row-gap:  1rem;
 
   .example-form {
     min-width: 150px;
     max-width: 500px;
-    max-height: 400px;
+    max-height: 500px;
     width: 100%;
     box-shadow: 1px 2px 7px grey;
     padding: 0.5rem;
     margin: 0 auto;
-  }
 
-  .example-full-width {
-    width: 100%;
-  }
+    .example-full-width {
+      width: 100%;
 
-  td {
-    padding-right: 8px;
-  }
-  .flex__wraper{
-    display: flex;
-    flex-wrap: wrap;
+      .flex__wraper{
+        display: flex;
+        flex-wrap: wrap;
+
+        td {
+          padding-right: 8px;
+
+          .mat-radio-button ~ .mat-radio-button {
+            margin-left: 16px;
+          }
+          
+          .form__ratio_delivey{
+            margin: 0 0 1rem 0.5rem;
+          }
+        }
+      }
+    }
+
+    div{
+      display: flex;
+      justify-content: center;
+      max-height: 50px;
+      height: 100vh;
+      margin-top: 0.8rem;
+      button{
+        font-size: 1.5rem;
+      }
+    }
   }
 }
