--- a/src/app/components/checkcart/details-products-cart/details-products-cart.component.scss
+++ b/src/app/components/checkcart/details-products-cart/details-products-cart.component.scss
@@ -5,6 +5,8 @@ div.container__detail__cart__generla{
   grid-row-gap: 2rem;
   
   .example-container {
+    min-width: 750px;
+    width: 100%;
     height: 400px;
     overflow: auto;
 
