--- a/src/app/components/catalogue/product/product.component.html
+++ b/src/app/components/catalogue/product/product.component.html
@@ -5,6 +5,7 @@
       product.name
     }}</mat-card-title>
     <mat-card-subtitle>{{ product.price | currency }}</mat-card-subtitle>
+    <mat-card-subtitle>disponibles: {{ product.stock }}</mat-card-subtitle>
   </mat-card-header>
   <img
     mat-card-image
@@ -24,7 +25,7 @@
       <mat-icon>star</mat-icon>
       <mat-icon>star</mat-icon>
     </div>
-    <button mat-flat-button color="warn" (click)="addCart()">
+    <button mat-flat-button color="warn" (click)="addCart()" [disabled]="product.stock === 0">
       {{ product.price | currency }}
       <mat-icon>add_shopping_cart</mat-icon>
     </button>
