--- a/src/app/components/catalogue/product/product.component.html
+++ b/src/app/components/catalogue/product/product.component.html
@@ -1,6 +1,5 @@
 <mat-card class="example-card" >
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title class="title" title="{{ product.name }}">{{
       product.name
     }}</mat-card-title>
@@ -13,9 +12,17 @@
     alt="Photo of a Shiba Inu"
   />
   <mat-card-content>
-    <p class="description">
+    <p class="description" #descriptionRef>
       {{ product.description }}
     </p>
+    <div class="more__description" (click)="moreDescription()" *ngIf="isMode">
+      <span>mostrar mas</span>
+      <mat-icon aria-hidden="false" aria-label="Example home icon">keyboard_arrow_down</mat-icon>
+    </div>
+    <div class="more__description" (click)="moreDescription()" *ngIf="!isMode">
+      <span>mostrar menos</span>
+      <mat-icon aria-hidden="false" aria-label="Example home icon">keyboard_arrow_up</mat-icon>
+    </div>
   </mat-card-content>
   <mat-card-actions class="flex__action">
     <div>
