--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,7 +1,11 @@
 .example-spacer {
   flex: 1 1 auto;
 }
-a{
+a {
   text-decoration: none;
   color: #fff;
+}
+
+.cart__icon {
+  margin-top: 0.5rem;
 }
