--- a/src/app/components/checkcart/details-products-cart/details-products-cart.component.scss
+++ b/src/app/components/checkcart/details-products-cart/details-products-cart.component.scss
@@ -5,13 +5,46 @@ div.container__detail__cart__generla{
   grid-row-gap: 2rem;
   
   .example-container {
-    min-width: 750px;
+    min-width: 700px;
+    max-width: 854px;
     width: 100%;
     height: 400px;
     overflow: auto;
 
     table {
       width: 100%;
+      
+      .product_fila{
+        width: 50%;
+      }
+    }
+    
+    th{
+
+      padding: 0 0.5rem;
+    }
+
+    td{
+        
+      padding: 0 0.5rem;
+
+      .aritmetic__quantity{
+        padding: 0.1rem 0.5rem;
+        background: rgb(210, 206, 206);
+        border-radius:  4px 4px 4px 4px;
+        margin:  0 0.2rem;
+        font-weight: 600;
+        font-size: 1rem;
+        cursor: pointer;
+
+      }
+
+      .delete__product__cart{
+        background: rgb(202, 51, 51);
+        padding: 0.5rem;
+        border-radius: 4px 4px 4px 4px;
+        color: #fff;
+      }
     }
     
     tr.mat-footer-row {
