pasando el metodo de ocultar o mostrar el menu del navbar al app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,26 @@
 <div class="content__general__app">
-    <app-navbar></app-navbar>
-    <div class="conten__router">
+    <app-navbar [reftogglemenu]="togglemenuoptions"></app-navbar>
+    
+    <div class="conten__router" >
+        
         <router-outlet></router-outlet>
     </div>
+    <ul #togglemenuoptions class="toggle__menu">
+        <li>
+            <mat-icon>
+                supervisor_account
+
+            </mat-icon>
+            Admin
+        </li>
+        <li [routerLink]="['/catalogo']">
+            <mat-icon>
+                shopping_basket
+            </mat-icon>
+            Catalogo
+        </li>
+        <li>opcion 3</li>
+        <li>opcion 4</li>
+    </ul>
     <app-footer></app-footer>
 </div>
