--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,8 +2,39 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 64px repeat(2, 1f);
-    grid-gap: 1rem
-}
-.conten__router{
-    margin: 0 1rem 0 1rem;
+    grid-gap: 1rem;
+    background: #1f1f38;
+    background-image: url(../assets/global/bg-texture.png);
+
+    .conten__router{
+        display: flex;  
+        justify-content: center;
+    }
+
+    .toggle__menu{
+        position: fixed;
+        top: 20%;
+        margin: 0;
+        width: 0;
+        border: 3px solid red;
+        transition: all 0.6s ease;
+        transform: translateX(-150px);
+        background: rgb(38, 102, 212);
+
+        li{
+            text-decoration: none;
+            color: #fff;
+            margin:  0.5rem 0;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            cursor: pointer;
+            transition: all 0.5s ease;
+        }
+        li:hover{
+            
+            color: rgb(38, 102, 212);
+            background: #fff;
+        }
+    }
 }
