--- a/src/app/components/checkcart/checkcart.component.scss
+++ b/src/app/components/checkcart/checkcart.component.scss
@@ -8,9 +8,11 @@ div.container {
     max-width: 485px;
     max-height: 500px;
     width: 100%;
-    box-shadow: 1px 2px 7px grey;
+    //box-shadow: 1px 2px 7px grey;
     padding: 0.5rem;
     margin: 0 auto;
+    background: var(--color-component-bg);
+    border-radius: 4px;
 
     .example-full-width {
       width: 100%;
