--- a/src/app/components/checkcart/details-products-cart/details-products-cart.component.scss
+++ b/src/app/components/checkcart/details-products-cart/details-products-cart.component.scss
@@ -46,6 +46,7 @@ div.container__detail__cart__generla{
         padding: 0.5rem;
         border-radius: 4px 4px 4px 4px;
         color: #fff;
+        cursor: pointer;
       }
     }
     
