--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,26 +15,11 @@
         position: fixed;
         top: 20%;
         margin: 0;
-        width: 0;
-        border: 3px solid red;
+        transform: translateX(-100%);
         transition: all 0.6s ease;
-        transform: translateX(-150px);
         background: rgb(38, 102, 212);
-
-        li{
-            text-decoration: none;
-            color: #fff;
-            margin:  0.5rem 0;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            cursor: pointer;
-            transition: all 0.5s ease;
-        }
-        li:hover{
-            
-            color: rgb(38, 102, 212);
-            background: #fff;
-        }
+    }
+    .toggle__menu.active{
+        transform: translateX(0);
     }
 }
