--- a/src/app/components/catalogue/product/product.component.html
+++ b/src/app/components/catalogue/product/product.component.html
@@ -1,13 +1,13 @@
 <mat-card class="example-card" >
   <mat-card-header>
-    <mat-card-title class="title" title="{{ product.name }}">{{
+    <mat-card-title class="title" title="{{ product.name }}" (click)='findProduct()'>{{
       product.name
     }}</mat-card-title>
     <mat-card-subtitle>disponibles: {{ product.stock }}</mat-card-subtitle>
   </mat-card-header>
   <img
     mat-card-image
-    src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+    [src]="coverImg"
     alt="Photo of a Shiba Inu"
   />
   <mat-card-content>
