--- a/src/app/components/checkcart/checkcart.component.scss
+++ b/src/app/components/checkcart/checkcart.component.scss
@@ -3,10 +3,11 @@ div.container {
   flex-wrap: wrap;
   gap:  1.5rem;
   justify-content: center;
+  margin: 0 0.5rem;
 
   .example-form {
     max-width: 485px;
-    max-height: 500px;
+    height: 100%;
     width: 100%;
     //box-shadow: 1px 2px 7px grey;
     padding: 0.5rem;
