--- a/src/app/components/catalogue/details-product/details-product.component.html
+++ b/src/app/components/catalogue/details-product/details-product.component.html
@@ -1,10 +1,13 @@
-<div>
-  <h3>{{ product.name }}</h3>
-  <h3>{{ product.description }}</h3>
-  <img [src]="fotoSeleccionada" alt="img-product" />
-  <div *ngFor="let photo of product.galeryImg">
-    <img [src]="photo" alt="img-product-for">
+<section>
+  <span *ngIf="isLoading">Loading</span>
+  <div *ngIf="!isLoading">
+    <h3>{{ product.name }}</h3>
+    <h3>{{ product.description }}</h3>
+    <img [src]="fotoSeleccionada" alt="img-product" />
+    <div *ngFor="let photo of product.galeryImg">
+      <img [src]="photo" alt="img-product-for" />
+    </div>
+    <h3>{{ product.price | currency }}</h3>
+    <h3>{{ product.stock }}</h3>
   </div>
-  <h3>{{ product.price | currency }}</h3>
-  <h3>{{ product.stock }}</h3>
-</div>
+</section>
